--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet = prophet[568:]"
    ]
   },
   {
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "print(prophet[:10]"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_reference = list(map(reference, prophet))"
    ]
   },
   {
@@ -187,7 +187,7 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_line = list(map(line_break, prophet_reference))"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_flat = [item for sublist in prophet_line for item in sublist]"
    ]
   },
   {
@@ -248,7 +248,7 @@
     "    \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
-    "    # your code here"
+    "    return x.lower() not in word_list"
    ]
   },
   {
@@ -266,7 +266,7 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_filter = list(filter(word_filter, prophet_flat))"
    ]
   },
   {
@@ -288,7 +288,7 @@
     "   \n",
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
-    "    # your code here\n",
+    "    prophet_filter_case = list(filter(word_filter_case, prophet_flat))\n",
     "    counting = sum([x.lower().count(i) for i in word_list])\n",
     "    return False if counting > 0 else True"
    ]
@@ -320,7 +320,7 @@
     "    Output: 'John Smith'\n",
     "    '''\n",
     "    \n",
-    "    # your code here"
+    "    return a + ' ' + b\n"
    ]
   },
   {
@@ -331,7 +331,7 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_string = reduce(concat_space, prophet_filter_case)"
    ]
   },
   {
@@ -347,8 +347,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "prophet_string = reduce(concat_space, prophet_filter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(prophet_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -371,5 +394,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
